--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinFlow - Working Capital Intelligence | Growth Demo</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -1004,4 +1005,5 @@ async function createHubSpotContact(leadData) {
         }
     </script>
 </body>
+
 </html>
