--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ async function calculateLeadScore(leadData) {
         const enrichedLead = enrichLeadData(leadData);
         
         // Calculate lead score
-        const score = calculateLeadScore(enrichedLead);
+        const score = await calculateLeadScore(enrichedLead);
         enrichedLead.score = score;
         enrichedLead.qualified = score >= 60;
         enrichedLead.status = getLeadStatus(score);
@@ -1221,4 +1221,5 @@ async function calculateLeadScore(leadData) {
 </body>
 
 </html>
+
 
