--- a/index.html
+++ b/index.html
@@ -584,6 +584,16 @@
                     
                     <button type="submit" class="submit-btn" id="submitBtn">Request Demo</button>
                 </form>
+                <div style="margin-top: 40px; padding: 20px; background: #f0f0f0;">
+  <h3>What Happens Next?</h3>
+  <p>After you submit, watch the magic:</p>
+  <ol>
+    <li>Check the <a href="[agent-url]">Autonomous Agent Dashboard</a> - your lead will appear in real-time</li>
+    <li>Ask the agent: "Which contacts should I reach out to today?"</li>
+    <li>See your contact in HubSpot (if you want access, DM me)</li>
+  </ol>
+  <p><strong>This entire pipeline is automated. No human intervention.</strong></p>
+</div>
             </div>
         </section>
 
@@ -1941,4 +1951,5 @@ Session Data:
     </script>
 </body>
 </html>
+
 
