--- a/index.html
+++ b/index.html
@@ -1959,7 +1959,7 @@ Session Data:
                 closeModal();
             }
         }
-        / Add the new function here
+        // Add the new function here
         async function loadLiveActivity() {
             try {
                 const response = await fetch('https://your-actual-agent-url.railway.app/api/status');
@@ -1989,6 +1989,7 @@ Session Data:
     </script>
 </body>
 </html>
+
 
 
 
