--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
     <script>
         // Backend configurations - UPDATE THESE
         const API_ENDPOINTS = {
-            production: 'https://gtmfinflow.replit.app/api/leads',
-            backup: 'https://workspace.parthbadani96.replit.dev/api/leads',
+            production: 'https://workspace.parthbadani96.replit.dev/api/leads',
+            backup: 'https://gtmfinflow.replit.app/api/leads',
             local: 'http://localhost:3000/api/leads'
         };
         
@@ -477,3 +477,4 @@
     </script>
 </body>
 </html>
+
